--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,14 @@
 <resources>
     <string name="app_name">RemindMe Beta</string>
     <string name="search">Search</string>
+
     <string name="menu_item_notification">Нагадування</string>
+
     <string name="view_navigation_close">Close</string>
     <string name="view_navigation_open">Open</string>
+
+    <string name="tab_item_history">History</string>
+    <string name="tab_item_ideas">IDEAS</string>
+    <string name="tab_item_todo">TODO</string>
+    <string name="tab_item_birthday">Birthday</string>
 </resources>
